# imgui-paint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/fonts/: README.md
assets/shaders/: basic.frag  basic.vert  blur.frag  color.frag  fbo.vert  grayscale.frag  monochrome.frag
include/: dialog.hpp  window.hpp
include/fonts/: fonts.hpp
include/geometries/: surface_ndc.hpp
include/gui/: dialog.hpp
include/image/: image_cv.hpp  image_utils.hpp  image_vector.hpp  image_vg.hpp
include/processing/: image_utils.hpp
include/ui/: canvas.hpp  dialog.hpp  frame.hpp  hover_mode.hpp  imgui_utils.hpp  menu.hpp  toolbar.hpp
include/ui/constants/: mouse.hpp  size.hpp
include/ui/enumerations/: click_mode.hpp  hover_mode.hpp  mode.hpp
include/ui/globals/: color.hpp  cursor.hpp  mode.hpp
include/ui/listeners/: listener_canvas.hpp  listener_window.hpp
include/ui/tooltips/: tooltip_image.hpp  tooltip_pixel.hpp
include/utils/: utils.hpp
src/: dialog.cpp  image_utils.cpp  main.cpp  monitor.cpp  window.cpp
src/fonts/: fonts.cpp
src/geometries/: surface_ndc.cpp
src/gui/: dialog.cpp
src/image/: image_cv.cpp  image_cv.cpp.bk  image_utils.cpp  image_vector.cpp  image_vg.cpp
src/processing/: image_utils.cpp
src/profiling/: profiler.cpp
src/ui/: canvas.cpp  dialog.cpp  frame.cpp  imgui_utils.cpp  menu.cpp  toolbar.cpp
src/ui/constants/: mouse.cpp  size.cpp
src/ui/globals/: color.cpp  cursor.cpp  mode.cpp  size.cpp
src/ui/listeners/: listener_canvas.cpp  listener_window.cpp
src/ui/tooltips/: tooltip_image.cpp  tooltip_pixel.cpp
src/utils/: utils.cpp
src/window/: monitor.cpp  window.cpp
